[FIXED]: - fixed bottom sheet center align - fixed progress circle width

--- a/src/app/dialog/budget-details/budget-details.scss
+++ b/src/app/dialog/budget-details/budget-details.scss
@@ -1,7 +1,8 @@
 .progress-indicator {
   display: grid;
   place-items: center;
-  --size: min(20rem, 90vw);
+//   --size: min(20rem, 90vw);
+  --size: 100%;
   --bar-width: 4rem;
   width: var(--size);
   aspect-ratio: 1 / 1;
